--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
     "react-native-flipper": "^0.206.0",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
     "redux-flipper": "^2.0.2",
     "typescript": "4.8.4"
   }
